// --- Enums ---
Enum OrganizationRole { 
  Owner 
  Admin 
  Member 
}
Enum ProjectRole { 
  Owner 
  Admin 
  Member 
  Viewer 
}
Enum TaskStatus { 
  Todo 
  InProgress 
  Done 
  Archived 
}
Enum TaskPriority { 
  Low 
  Medium 
  High 
}
Enum ProjectStatus { 
  Active 
  Archived 
  Completed 
}

// --- Tables ---

Table Users {
  Id int [pk, increment]
  FullName varchar [not null]
  Username varchar [not null, unique]
  Email varchar [not null, unique]
  PasswordHash varchar [not null]
  AvatarUrl varchar
  LastLoginAt timestamp
  CreatedAt timestamp [default: `now()`]
  UpdatedAt timestamp
  DeletedAt timestamp [note: 'Null = Active']
}

Table Organizations {
  Id int [pk, increment]
  Name varchar [not null]
  Slug varchar [unique, not null]
  OwnerId int [not null, ref: > Users.Id]
  CreatedAt timestamp [default: `now()`]
  UpdatedAt timestamp
  DeletedAt timestamp
}

Table OrganizationMembers {
  Id int [pk, increment]
  OrganizationId int [not null, ref: > Organizations.Id]
  UserId int [not null, ref: > Users.Id]
  Role OrganizationRole [default: 'Member']
  JoinedAt timestamp [default: `now()`]
  LeftAt timestamp [null]

  Indexes {
    (OrganizationId, UserId) [unique] // Prevents duplicate membership
  }
}

Table Projects {
  Id int [pk, increment]
  OrganizationId int [not null, ref: > Organizations.Id]
  Title varchar [not null]
  Slug varchar [not null]
  Description text
  Status ProjectStatus [default: 'Active']
  CreatedBy int [not null, ref: > Users.Id]
  StartDate date
  EndDate date
  CreatedAt timestamp [default: `now()`]
  UpdatedAt timestamp
  DeletedAt timestamp

  Indexes {
    (OrganizationId, Slug) [unique] // Slugs unique within Organization
  }
}

Table ProjectMembers {
  Id int [pk, increment]
  ProjectId int [not null, ref: > Projects.Id]
  UserId int [not null, ref: > Users.Id]
  Role ProjectRole [default: 'Member']
  JoinedAt timestamp [default: `now()`]

  Indexes {
    (ProjectId, UserId) [unique]
  }
}

Table Tasks {
  Id int [pk, increment]
  ProjectId int [not null, ref: > Projects.Id]
  OrganizationId int [not null, ref: > Organizations.Id] // Denormalized for security
  Title varchar [not null]
  Description text
  Status TaskStatus [default: 'Todo']
  Priority TaskPriority [default: 'Medium']
  CreatedBy int [not null, ref: > Users.Id]
  AssignedTo int [ref: > Users.Id]
  DueDate datetime
  CreatedAt timestamp [default: `now()`]
  UpdatedAt timestamp
  DeletedAt timestamp

  Indexes {
    ProjectId
    OrganizationId 
    AssignedTo
    (OrganizationId, Status) // Performance for Global Dashboard
  }
}

Table Comments {
  Id int [pk, increment]
  TaskId int [not null, ref: > Tasks.Id]
  UserId int [not null, ref: > Users.Id]
  ParentCommentId int [ref: > Comments.Id, null]
  Content text [not null]
  IsEdited boolean [default: false]
  CreatedAt timestamp [default: `now()`]
  UpdatedAt timestamp
  DeletedAt timestamp
}

Table ActivityLogs {
  Id bigint [pk, increment]
  OrganizationId int [not null, ref: > Organizations.Id]
  UserId int [ref: > Users.Id]
  Action varchar // e.g., 'Task.StatusChange'
  EntityId int
  OldValue text
  NewValue text
  Timestamp timestamp [default: `now()`]
}